Boilerplate code for logs support

--- a/receiver/datadogreceiver/metadata.yaml
+++ b/receiver/datadogreceiver/metadata.yaml
@@ -4,6 +4,7 @@ status:
   class: receiver
   stability:
     alpha: [traces, metrics]
+    development: [logs]
   distributions: [contrib]
   codeowners:
     active: [boostchicken, gouthamve, MovieStoreGuy]
